Fix footer clipping

--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -244,7 +244,7 @@ footer {
 
 .footer-text {
     margin: 5px;
-    font-size: min(4vw, 20px);
+    font-size: min(3.5vw, 18px);
 }
 
 /* MENU */
